--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Our Company | by Nurman</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./fonts/font.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts/font.css">
 </head>
-
 <body>
-    <!-- ====================================== navbar ====================================== -->
+    <!-- ====================================== navbar start ====================================== -->
     <nav class="navbar">
         <img class="web-logo" src="./img/logo.png" alt="">
         <div class="nav-item">
@@ -25,39 +25,41 @@
             <div class="sosmed-icon"><img src="./img/sosmed.png" alt=""></div>
         </div>
         <div class="ph-number"><img src="./img/whatsapp.png" alt="">+6285345623493</div>
+            <div class="list">
+                <img src="list.png" alt="">
+            </div>
     </nav>
+    <!-- ====================================== navbar end ====================================== -->
+        <!-- ====================================== hero start ====================================== -->
+
+        <div class="hero">
+            <div class="hero-txt">
+                <h1 class="hero-header">
+                    <div>Know your</div>
+                    <div>field and control your</div>
+                    <div>own development</div>
+                </h1>
+                <p class="hero-desc">
+                    Notice how this Trick is Very Simpler than ever
+                </p>
+                <button class="hero-btn">Strategic Context</button>
+            </div>
+            <div class="hero-img">
+                <img src="./img/main.png" alt="">
+            </div>
+        </div>
+            <!-- ====================================== hero end ====================================== -->
+    
+            <!-- ====================================== sponsor ====================================== -->
+    <div class="sponsor">
+        <img src="./img/we_are_search_logo.png" alt="">
+        <img src="./img/hsjawardslogo_48526.png" alt="">
+        <img src="./img/Logo-Stacked.png" alt="">
+        <img src="./img/download.png" alt="">
+        <img src="./img/CSS_Corp202203080456192022030805.png" alt="">
+    </div>
+        
     <!-- ====================================== navbar ====================================== -->
 
-    <!-- ====================================== hero ====================================== -->
-
-    <section class="hero">
-        <div class="hero-txt">
-            <h1 class="hero-header">
-                <div>Know your</div>
-                <div>field and control your</div>
-                <div>own development</div>
-            </h1>
-            <p class="hero-desc">
-                Notice how this Trick is Very Simpler than ever
-            </p>
-            <button class="hero-btn">Strategic Context</button>
-        </div>
-        <div class="hero-img">
-            <img src="./img/main.png" alt="">
-        </div>
-    </section>
-        <!-- ====================================== hero ====================================== -->
-
-        <!-- ====================================== sponsor ====================================== -->
-   <section class="sponsor">
-    <img src="./img/we_are_search_logo.png" alt="">
-    <img src="./img/hsjawardslogo_48526.png" alt="">
-    <img src="./img/Logo-Stacked.png" alt="">
-    <img src="./img/download.png" alt="">
-    <img src="./img/CSS_Corp202203080456192022030805.png" alt="">
-   </section>
-            <!-- ====================================== navbar ====================================== -->
-
 </body>
-
 </html>
